--- a/index.html
+++ b/index.html
@@ -21,25 +21,27 @@
       href="https://devchallenges.io/"
     />
 
-    <title>Devchallenges</title>
+    <title>404 Not Found</title>
   </head>
   <body>
     <h1 id="main-banner">404 NOT FOUND</h1>
 
     <img src="img/Scarecrow.png" alt="Scarecrow" id="main-bg" />
 
-    <h2 id="intro">
-      I have a bad <br />
-      news for you
-    </h2>
+    <div id="wrapper">
+      <h2 id="intro">
+        I have a bad <br />
+        news for you
+      </h2>
 
-    <p id="info">
-      The page your are looking for <br />
-      might be removed or is <br />
-      temporarily unavailable
-    </p>
+      <p id="info">
+        The page your are looking for <br />
+        might be removed or is <br />
+        temporarily unavailable
+      </p>
 
-    <button id="home">BACK TO HOMEPAGE</button>
+      <button id="home">BACK TO HOMEPAGE</button>
+    </div>
 
     <footer>
       <h3>
